# GBase-Assistant

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  Makefile  README.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5c906286dcba_add_archived_and_tags_to_conversations.py
backend/app/: config.py  database.py  dependencies.py  main.py  protocols.py
backend/app/api/: chat.py  connections.py  health.py  models.py  router.py
backend/app/chains/: intent.py  qa_chain.py  sql_chain.py
backend/app/knowledge/: loader.py
backend/app/llm/: client.py  prompts.py
backend/app/models/: connection.py  conversation.py  message.py  sql_feedback.py
backend/app/schemas/: chat.py  connection.py
backend/app/sql/: dialect.py  validator.py
backend/config/: models.yaml
backend/tests/: test_api.py  test_sql_chain.py  test_sql_validator.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/api/: chat.ts  client.ts  connections.ts  feedback.ts  models.ts
frontend/src/assets/: base.css  main.css
frontend/src/components/chat/: ChatPanel.vue  MessageBubble.vue  SqlBlock.vue
frontend/src/composables/: useContentParser.ts  useSSE.ts  useTheme.ts
frontend/src/router/: index.ts
frontend/src/stores/: chat.ts  connection.ts
frontend/src/views/: HomeView.vue  SettingsView.vue
knowledge/dialect_rules/: function_mapping.yaml  syntax_differences.yaml  unsupported_features.yaml
knowledge/docs/: faq.json
knowledge/examples/: sql_examples.jsonl
(+1 files in other folders)
